# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  SELECT AS STRUCT column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_shape	STRUCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    SelectAsStruct(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  SELECT AS VALUE column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_shape	VALUE
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    SelectAsValue(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_distinct]
  '''
  SELECT DISTINCT column1 FROM table1
  
  query_expr
    select
      select_metadata
        select_mode	DISTINCT
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_dot_star_except]
  '''
  SELECT struct_column.* EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	struct_column
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectDotStar
          Ident(struct_column)
          ExceptModifierList
            ExceptModifierItem
              Ident(column1)
            ExceptModifierItem
              Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_dot_star_replace]
  '''
  SELECT struct_column.* REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	struct_column
          None
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectDotStar
          Ident(struct_column)
          ReplaceModifierList
            ReplaceModifierItem
              IntegerLiteral(1)
              Ident(column1)
            ReplaceModifierItem
              IntegerLiteral(2)
              Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  SELECT column1 FROM table1 AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
          Alias
            Ident(alias1)
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  SELECT column1 FROM table1 alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          as_alias
            ident	alias1
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
          Alias
            Ident(alias1)
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  SELECT column1 FROM table1 FOR SYSTEM_TIME AS OF '1970-01-01'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          time_travel
            string_literal	'1970-01-01'
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
          TimeTravel
            StringLiteral('1970-01-01')
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  SELECT column1 AS alias1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
          Alias
            Ident(alias1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  SELECT column1 alias1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
          as_alias
            ident	alias1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
          Alias
            Ident(alias1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  SELECT column1, column2 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
        select_expr
          ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
        SelectColumn
          Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  SELECT column1 FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  SELECT column1, FROM table2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_table
          path_expression
            ident	table2
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table2)
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  SELECT 1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	1
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          IntegerLiteral(1)
  '''
# ---
# name: test_select_ok[select_star]
  '''
  SELECT * FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectStar
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_star_except]
  '''
  SELECT * EXCEPT(column1, column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          select_except
            select_except_list
              select_except_item
                ident	column1
              select_except_item
                ident	column2
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectStar
          ExceptModifierList
            ExceptModifierItem
              Ident(column1)
            ExceptModifierItem
              Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_star_replace]
  '''
  SELECT * REPLACE(1 AS column1, 2 AS column2) FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          None
          select_replace
            select_replace_list
              select_replace_item
                integer_literal	1
                ident	column1
              select_replace_item
                integer_literal	2
                ident	column2
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectStar
          ReplaceModifierList
            ReplaceModifierItem
              IntegerLiteral(1)
              Ident(column1)
            ReplaceModifierItem
              IntegerLiteral(2)
              Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  SELECT column1.* FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          ident	column1
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectDotStar
          Ident(column1)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  SELECT column1.column2.* FROM table1
  
  query_expr
    select
      select_metadata
      select_list
        select_dot_star
          path_expression
            ident	column1
            ident	column2
          None
          None
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectDotStar
          PathExpression
            Ident(column1)
            Ident(column2)
      FromClause
        TablePathExpression
          PathExpression
            Ident(table1)
  '''
# ---
# name: test_select_ok[select_subqueries]
  '''
  SELECT
      *,
      column1,
      (SELECT 1) AS column2
  FROM
      (SELECT column7 FROM table2) AS alias2
  
  query_expr
    select
      select_metadata
      select_list
        select_star
          None
          None
        select_expr
          ident	column1
        select_expr
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    integer_literal	1
          as_alias
            ident	column2
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column7
                from_clause
                  from_item_table
                    path_expression
                      ident	table2
                    None
                    None
          as_alias
            ident	alias2
  
  Query
    Select(distinct=False)
      SelectList
        SelectStar
        SelectColumn
          Ident(column1)
        SelectColumn
          Subquery
            Query
              Select(distinct=False)
                SelectList
                  SelectColumn
                    IntegerLiteral(1)
          Alias
            Ident(column2)
      FromClause
        TableSubquery
          Subquery
            Query
              Select(distinct=False)
                SelectList
                  SelectColumn
                    Ident(column7)
                FromClause
                  TablePathExpression
                    PathExpression
                      Ident(table2)
          Alias
            Ident(alias2)
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
                    None
                    None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableSubquery
          Subquery
            Query
              Select(distinct=False)
                SelectList
                  SelectColumn
                    Ident(column1)
                FromClause
                  TablePathExpression
                    PathExpression
                      Ident(table1)
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  SELECT column1 FROM (SELECT column1 FROM table1) AS table2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_metadata
                select_list
                  select_expr
                    ident	column1
                from_clause
                  from_item_table
                    path_expression
                      ident	table1
                    None
                    None
          as_alias
            ident	table2
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableSubquery
          Subquery
            Query
              Select(distinct=False)
                SelectList
                  SelectColumn
                    Ident(column1)
                FromClause
                  TablePathExpression
                    PathExpression
                      Ident(table1)
          Alias
            Ident(table2)
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  (SELECT 1)
  
  query_expr
    subquery
      query_expr
        select
          select_metadata
          select_list
            select_expr
              integer_literal	1
  
  Query
    Subquery
      Query
        Select(distinct=False)
          SelectList
            SelectColumn
              IntegerLiteral(1)
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  (SELECT (SELECT (SELECT 1)))
  
  query_expr
    subquery
      query_expr
        select
          select_metadata
          select_list
            select_expr
              subquery
                query_expr
                  select
                    select_metadata
                    select_list
                      select_expr
                        subquery
                          query_expr
                            select
                              select_metadata
                              select_list
                                select_expr
                                  integer_literal	1
  
  Query
    Subquery
      Query
        Select(distinct=False)
          SelectList
            SelectColumn
              Subquery
                Query
                  Select(distinct=False)
                    SelectList
                      SelectColumn
                        Subquery
                          Query
                            Select(distinct=False)
                              SelectList
                                SelectColumn
                                  IntegerLiteral(1)
  '''
# ---
# name: test_unnest_ok[unnest]
  '''
  SELECT column1 FROM UNNEST(array1)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableUnnestExpression
          UnnestExpression
            Ident(array1)
  '''
# ---
# name: test_unnest_ok[unnest_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableUnnestExpression
          UnnestExpression
            Ident(array1)
          Alias
            Ident(alias1)
  '''
# ---
# name: test_unnest_ok[unnest_alias_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) AS alias1 WITH OFFSET AS alias2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          as_alias
            ident	alias1
          from_unnest_offset_expr
            as_alias
              ident	alias2
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableUnnestExpression
          UnnestExpression
            Ident(array1)
          Alias
            Ident(alias1)
          WithOffset
            Alias
              Ident(alias2)
  '''
# ---
# name: test_unnest_ok[unnest_with_offset]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          from_unnest_offset_expr	None
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableUnnestExpression
          UnnestExpression
            Ident(array1)
          WithOffset
  '''
# ---
# name: test_unnest_ok[unnest_with_offset_alias]
  '''
  SELECT column1 FROM UNNEST(array1) WITH OFFSET AS alias1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          ident	column1
      from_clause
        from_item_unnest
          unnest_expr
            ident	array1
          None
          from_unnest_offset_expr
            as_alias
              ident	alias1
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          Ident(column1)
      FromClause
        TableUnnestExpression
          UnnestExpression
            Ident(array1)
          WithOffset
            Alias
              Ident(alias1)
  '''
# ---
